made docs for meetings
